Restructure page, dividing it into Category and Tag tabs Fix multiselect for category tags, so category-tag CRUD fully works Add error-handling, both development and production versions

--- a/apps/trolls_goals/public/css/style.css
+++ b/apps/trolls_goals/public/css/style.css
@@ -225,9 +225,21 @@ multiselect .dropdown-menu{
 
 multiselect .dropdown-menu > li > a {
     padding: 3px 10px;
-    cursor:pointer;
+    cursor :pointer;
 }
 
+.navbar {
+    min-height: 26px !important;
+    border-radius: 0 !important;
+}
+
+.nav a {
+    cursor: pointer;
+}
+
+td {
+  cursor: pointer;
+}
 
 /* ==|== media queries ======================================================
    EXAMPLE Media Query for Responsive Design.
